# neuroforge

./: .gitignore  BUILD_SUMMARY.md  CMakeLists.txt  LICENSE.md  MIT License.md  USAGE.md  build.bat  install.sh  makefile  neuroforge.pc.in  project structure  readme.md
cmake/: neuroforgeConfig.cmake.in
examples/: mnist.c  transformer.c  xor.c
src/: matrix.c  matrix.h  network.c  network.h  serialization.c  serialization.h
src/activations/: activation.c  activation.h
src/cuda/: cuda_ops.cu  cuda_ops.h
src/layers/: attention.c  batchnorm.c  conv2d.c  dense.c  dropout.c  layer.h  rnn.c
src/optimizers/: adam.c  optimizer.h  rmsprop.c  sgd.c
tests/: test_layers.c  test_optimizers.c  text_matrix.c
